@@ -2227,11 +2227,11 @@ public class NXCSession implements Session, ScriptLibraryManager, UserManager, S
     * @param requiredClass required object class
     * @return Object with given ID or null if object cannot be found or is not an instance of required class
     */
+   @SuppressWarnings("unchecked")
    public <T extends AbstractObject> T findObjectById(final long id, final Class<T> requiredClass)
    {
       AbstractObject object = findObjectById(id);
-      //noinspection unchecked
-      return requiredClass.isInstance(object) ? (T) object : null;
+      return requiredClass.isInstance(object) ? (T)object : null;
    }
 
    /**
